samples/_failures_safe/1761176069_ec27fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c289c40e.c: In function ‘main’:
./samples/SAFE/__tmp_c289c40e.c:148: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c289c40e.c:147:9: error: expected declaration or statement at end of input
  147 |         for
      |         ^~~
./samples/SAFE/__tmp_c289c40e.c:147:9: error: expected declaration or statement at end of input
